--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,9 +60,7 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - asset/-MOTOR-.png
-    - asset/MOTOR-.png
-
+    - asset/images/-MOTOR-.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -74,12 +72,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
+  fonts:
+    - family: Oxygen
+      fonts:
+        - asset: asset/fonts/Oxygen-Regular.ttf
+        - asset: asset/fonts/Oxygen-Light.ttf
+          weight: 300
+        - asset: asset/fonts/Oxygen-Bold.ttf
+          weight: 700
   #   - family: Trajan Pro
   #     fonts:
   #       - asset: fonts/TrajanPro.ttf
